# Mobile_GenH2R

./: .gitignore  .gitmodules  config_old.py  evaluate.py  evaluate_config.py  notes.md  policy_runner.py  readme.md  todo.md  transcation.md
env/: benchmark.py  body.py  camera.py  galbot.py  hand.py  handover_env.py  humanoid.py  objects.py  (+3 more)
env/data/assets/galbot_zero_lefthand/original_robot_description/galbot_description/: CMakeLists.txt  package.xml  readme.md
env/data/assets/galbot_zero_lefthand/original_robot_description/galbot_description/config/: camera_intrinsic_parameters.md
env/data/assets/galbot_zero_lefthand/original_robot_description/galbot_description/launch/: view_arm_base_flange.launch  view_arm_end_effector_flange.launch  view_arm_realman_rm75.launch  view_arm_realman_rm75_6f.launch  view_camera_d415_flange.launch  view_camera_d415_model.launch  view_galbot_zero.launch  view_gripper_inspire.launch  view_gripper_inspire_flange.launch  view_head.launch  view_hexman_chassis.launch  view_long_sucker.launch  view_sapien_left_arm.launch  view_sapien_right_arm.launch  view_torsor.launch
env/data/assets/galbot_zero_lefthand/original_robot_description/galbot_description/rviz/: arm_base_flange_urdf.rviz  arm_end_effector_flange_urdf.rviz  camera_d415_flange_urdf.rviz  camera_d415_urdf.rviz  galbot_zero_urdf.rviz  gripper_inspire_flange_urdf.rviz  gripper_inspire_urdf.rviz  head_urdf.rviz  hexman_chassis_urdf.rviz  long_sucker_urdf.rviz  realman_rm75_6f_urdf.rviz  realman_rm75_urdf.rviz  sapien_left_arm_urdf.rviz  sapien_right_arm_urdf.rviz  torsor_urdf.rviz
(+268 files in other folders)
